--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -983,7 +983,6 @@
 
                         </RelativeLayout>
 
-
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -1074,172 +1073,15 @@
 
                         </RelativeLayout>
 
+
                         <com.google.android.gms.ads.AdView
+                            xmlns:ads="http://schemas.android.com/apk/res-auto"
                             android:id="@+id/adView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="bottom"
+                            android:layout_gravity="center_horizontal"
                             ads:adSize="BANNER"
                             ads:adUnitId="ca-app-pub-6626454304064681/4284039493"/>
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:background="@drawable/rounded_corners_white"
-                            android:elevation="10dp"
-                            android:orientation="vertical"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
-                            android:paddingBottom="5dp">
-
-                            <LinearLayout
-                                android:id="@+id/gth4"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <LinearLayout
-                                    android:layout_width="10dp"
-                                    android:layout_height="10dp"
-                                    android:layout_gravity="center"
-                                    android:background="@color/Green_with_80_Black"></LinearLayout>
-
-                                <TextView
-                                    android:id="@+id/upodesta"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
-                                    android:layout_marginRight="10dp"
-                                    android:fontFamily="@font/solaimanlipi"
-                                    android:paddingTop="10dp"
-                                    android:paddingBottom="10dp"
-                                    android:text="@string/upodestaporishod"
-                                    android:textColor="@color/Green_with_80_Black"
-                                    android:textSize="20dp"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="40dp"
-                                android:layout_alignParentTop="true"
-                                android:layout_centerHorizontal="true"
-                                android:src="@drawable/shadow" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/gth4"
-                                android:orientation="horizontal">
-
-                                <HorizontalScrollView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="match_parent">
-
-                                    <LinearLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content">
-
-                                        <de.hdodenhof.circleimageview.CircleImageView
-                                            android:layout_width="60dp"
-                                            android:layout_height="60dp"
-                                            android:layout_marginRight="5dp"
-                                            android:src="@drawable/kamruzzaman_square" />
-
-                                        <de.hdodenhof.circleimageview.CircleImageView
-                                            android:layout_width="60dp"
-                                            android:layout_height="60dp"
-                                            android:layout_marginRight="5dp"
-                                            android:src="@drawable/nasir_square" />
-
-
-                                    </LinearLayout>
-                                </HorizontalScrollView>
-
-                            </LinearLayout>
-
-                        </RelativeLayout>
-
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:background="@drawable/rounded_corners_white"
-                            android:elevation="10dp"
-                            android:orientation="vertical"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
-                            android:paddingBottom="5dp">
-
-                            <LinearLayout
-                                android:id="@+id/gth5"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <LinearLayout
-                                    android:layout_width="10dp"
-                                    android:layout_height="10dp"
-                                    android:layout_gravity="center"
-                                    android:background="@color/Green_with_80_Black"></LinearLayout>
-
-                                <TextView
-                                    android:id="@+id/facebook"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="10dp"
-                                    android:layout_marginRight="10dp"
-                                    android:paddingTop="10dp"
-                                    android:paddingBottom="10dp"
-                                    android:text="Like us on Facebook"
-                                    android:textColor="@color/Green_with_80_Black"
-                                    android:textSize="20dp"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="40dp"
-                                android:layout_alignParentTop="true"
-                                android:layout_centerHorizontal="true"
-                                android:src="@drawable/shadow" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/gth5"
-                                android:gravity="center"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:id="@+id/myfb"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="50dp"
-                                    android:onClick="myfb_shares"
-                                    android:src="@drawable/fb_logo" />
-
-
-                                <ImageView
-                                    android:id="@+id/fb_like"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="50dp"
-                                    android:onClick="fb_likes"
-                                    android:src="@drawable/fb_like"
-                                    tools:ignore="OnClick" />
-
-                                <ImageView
-                                    android:id="@+id/fb_share"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="50dp"
-                                    android:onClick="fb_shares"
-                                    android:src="@drawable/fb_share" />
-
-                            </LinearLayout>
-
-                        </RelativeLayout>
-
 
                     </LinearLayout>
                 </ScrollView>
