--- a/app/src/main/res/layout/item_members.xml
+++ b/app/src/main/res/layout/item_members.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-   <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
-        android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_margin="8dp"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="8dp"
+        card_view:cardElevation="4dp">
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tvName"
@@ -25,7 +31,7 @@
                 android:textColor="#666666" />
 
             <TextView
-                android:id="@+id/tvDescription"
+                android:id="@+id/tvDesignation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Description"
@@ -37,5 +43,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:scaleType="centerCrop"
-                android:layout_marginTop="8dp"/>
-    </LinearLayout>
+                android:layout_marginTop="8dp"
+                android:visibility="gone"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
