--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -493,6 +493,13 @@
                                     android:stretchColumns="*"
                                     android:shrinkColumns="*"
                                     android:padding="2dp">
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:text="@string/monthly_income_expence"
+                                        android:textSize="20sp"
+                                        android:textAlignment="center"
+                                        android:textStyle="bold"/>
 
                                     <!-- Row 1 -->
                                     <TableRow>
@@ -526,18 +533,29 @@
 
                                     <!-- Row 3 -->
                                     <TableRow>
-                                        <TextView android:text="1." android:padding="2dp"/>
+                                        <TextView
+                                            android:text="1"
+                                            android:textAlignment="center"
+                                            android:padding="2dp"/>
                                         <TextView android:text="@string/monthly_chada" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/monthly_chada"
+                                            android:layout_marginEnd="10dp"
+                                            android:gravity="right"
                                             android:text="R3C3" android:padding="2dp"/>
                                     </TableRow>
 
                                     <!-- Row 4 -->
                                     <TableRow>
-                                        <TextView android:text="2" android:padding="2dp"/>
+                                        <TextView
+                                            android:text="2"
+                                            android:textAlignment="center"
+                                            android:padding="2dp"/>
                                         <TextView android:text="@string/masjid_kouta" android:padding="2dp"/>
-                                        <TextView android:text="" android:padding="2dp"/>
+                                        <TextView
+                                            android:text=""
+                                            android:gravity="right"
+                                            android:padding="2dp"/>
                                     </TableRow>
 
                                     <!-- Row 5 -->
@@ -546,7 +564,7 @@
                                         <TextView android:text="@string/first_week" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/first_week"
-                                            android:text="R5C3"
+                                            android:gravity="right"
                                             android:padding="2dp"/>
                                     </TableRow>
 
@@ -556,7 +574,8 @@
                                         <TextView android:text="@string/second_week" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/second_week"
-                                            android:text="R6C3" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:padding="2dp"/>
                                     </TableRow>
 
                                     <!-- Row 7 -->
@@ -565,7 +584,8 @@
                                         <TextView android:text="@string/third_week" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/third_week"
-                                            android:text="R7C3" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:padding="2dp"/>
                                     </TableRow>
 
                                     <!-- Row 8 -->
@@ -574,27 +594,39 @@
                                         <TextView android:text="@string/fourth_week" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/fourth_week"
-                                            android:text="R8C3" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:padding="2dp"/>
                                     </TableRow>
 
                                     <!-- Row 9 -->
                                     <TableRow>
-                                        <TextView android:text="3" android:padding="2dp"/>
+                                        <TextView
+                                            android:text="3"
+                                            android:textAlignment="center"
+                                            android:padding="2dp"/>
                                         <TextView android:text="@string/misc_danbox" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/misc_danbox"
-                                            android:text="R9C3" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:padding="2dp"/>
                                     </TableRow>
+                                    <View
+                                        android:layout_width="match_parent"
+                                        android:layout_height="1dp"
+                                        android:background="@color/Dark_Ash"/>
 
                                     <!-- Row 10 -->
                                     <TableRow>
                                         <TextView android:text="" android:padding="2dp"/>
                                         <TextView
                                             android:text="@string/total_income"
+                                            android:textStyle="bold"
                                             android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/total_income"
-                                            android:text="R10C3" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:textStyle="bold"
+                                            android:padding="2dp"/>
                                     </TableRow>
 
 
@@ -630,52 +662,75 @@
 
                                     <!-- Row 13 -->
                                     <TableRow>
-                                        <TextView android:text="1" android:padding="2dp"/>
+                                        <TextView
+                                            android:text="1"
+                                            android:textAlignment="center"
+                                            android:padding="2dp"/>
                                         <TextView android:text="@string/imam_salary" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/imam_salary"
-                                            android:text="R13C3" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:padding="2dp"/>
                                     </TableRow>
 
                                     <!-- Row 14 -->
                                     <TableRow>
-                                        <TextView android:text="2" android:padding="2dp"/>
+                                        <TextView
+                                            android:text="2"
+                                            android:textAlignment="center"
+                                            android:padding="2dp"/>
                                         <TextView android:text="@string/muajjin_salary" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/muajjin_salary"
-                                            android:text="R14C3"
+                                            android:gravity="right"
                                             android:padding="2dp"/>
                                     </TableRow>
 
                                     <!-- Row 15 -->
                                     <TableRow>
-                                        <TextView android:text="3" android:padding="2dp"/>
+                                        <TextView
+                                            android:text="3"
+                                            android:textAlignment="center"
+                                            android:padding="2dp"/>
                                         <TextView android:text="@string/electricity_bill" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/electricity_bill"
-                                            android:text="R15C3"
+                                            android:gravity="right"
                                             android:padding="2dp"/>
                                     </TableRow>
 
                                     <!-- Row 16 -->
                                     <TableRow>
-                                        <TextView android:text="4" android:padding="2dp"/>
+                                        <TextView
+                                            android:text="4"
+                                            android:textAlignment="center"
+                                            android:padding="2dp"/>
                                         <TextView android:text="@string/misc_expence" android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/misc_expence"
-                                            android:text="R16C3"
+                                            android:gravity="right"
                                             android:padding="2dp"/>
                                     </TableRow>
-
+                                    <View
+                                        android:layout_width="match_parent"
+                                        android:layout_height="1dp"
+                                        android:background="@color/Dark_Ash"/>
                                     <!-- Row 17 -->
                                     <TableRow>
                                         <TextView android:text="" android:padding="2dp"/>
-                                        <TextView android:text="@string/total_expence" android:padding="2dp"/>
+                                        <TextView android:text="@string/total_expence"
+                                            android:textStyle="bold"
+                                            android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/total_expence"
-                                            android:text="R17C3"
+                                            android:gravity="right"
+                                            android:textStyle="bold"
                                             android:padding="2dp"/>
                                     </TableRow>
+                                    <View
+                                        android:layout_width="match_parent"
+                                        android:layout_height="1dp"
+                                        android:background="@color/Dark_Ash"/>
 
 
                                     <!-- Row 18 -->
@@ -688,7 +743,9 @@
                                             android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/cash_in_hand"
-                                            android:text="R18C2" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:textStyle="bold"
+                                            android:padding="2dp"/>
                                     </TableRow>
                                     <!-- Row 19 -->
                                     <TableRow>
@@ -700,7 +757,9 @@
                                             android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/dev_fund_income"
-                                            android:text="R18C2" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:textStyle="bold"
+                                            android:padding="2dp"/>
                                     </TableRow>
                                     <!-- Row 20 -->
                                     <TableRow>
@@ -712,8 +771,14 @@
                                             android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/kollan_fund_income"
-                                            android:text="koll" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:textStyle="bold"
+                                            android:padding="2dp"/>
                                     </TableRow>
+                                    <View
+                                        android:layout_width="match_parent"
+                                        android:layout_height="1dp"
+                                        android:background="@color/Dark_Ash"/>
 
                                     <!-- Row 21 -->
                                     <TableRow>
@@ -725,7 +790,9 @@
                                             android:padding="2dp"/>
                                         <TextView
                                             android:id="@+id/current_balance"
-                                            android:text="koll" android:padding="2dp"/>
+                                            android:gravity="right"
+                                            android:textStyle="bold"
+                                            android:padding="2dp"/>
                                     </TableRow>
 
                                 </TableLayout>
